@@ -122,6 +122,10 @@ buildstream 1.3.1
     'shell', 'show', 'source-checkout', 'track', 'workspace close' and 'workspace reset'
     commands are affected.
 
+  o bst 'build' now has '--remote, -r' option, inline with bst 'push' & 'pull'.
+    Providing a remote will limit build's pull/push remote actions to the given
+    remote specifically, ignoring those defined via user or project configuration.
+
 
 =================
 buildstream 1.1.5
